# SpotGridBot

./: CMakeLists.txt  CurrencyConfig.xml  README.md  config.xml  grid_calc.py  logging.properties
include/: ActiveQuoteTable.h  AdapterExecutor.h  Config.h  ConnectionBase.h  ConnectionManager.h  Crypto.h  CryptoCommon.h  Definitions.h  IConnection.h  JSONDocument.h  Logger.h  MessageProcessor.h  Options.h  OrderManager.h  RestBase.h  RestConnectionBase.h  SchemaDefs.h  SessionConfigController.h  Settings.h  Tools.h  libbase64.hpp
include/OKX/: ConnectionMD.h  ConnectionORD.h  Definitions.h
include/binance/: ConnectionMD.h  ConnectionORD.h  ConnectionSS.h  Definitions.h
include/coinbase/: ConnectionMD.h  ConnectionORD.h  Messages.h
lib/gridbot/: CMakeLists.txt  README.md  config.json
lib/gridbot/include/: GridConfig.h  IOrderManager.h  exchange.h  gridstrategy.h
lib/gridbot/src/: GridConfig.cpp  gridstrategy.cpp
lib/orderbook/: CMakeLists.txt
lib/orderbook/include/OrderBook/: BookBase.h  BookContext.h  BookView.h  Filter.h  FilterView.h  IPublisher.h  OrderBook.h  Quote.h  QuoteGroup.h  bookproperties.h
lib/orderbook/src/: BookView.cpp  Filter.cpp  FilterView.cpp  OrderBook.cpp  Quote.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/Utils/: AppHandler.h  BackgroundWorker.hpp  BgwMonitor.h  CmdArgParser.h  CommandLogger.h  ContextBase.h  CurrencyPair.h  CurrentRateManager.h  DataContext.h  ErrorHandler.h  EventManager.h  FixDefs.h  FixTypes.h  Latency.h  LocalizedException.h  Lockable.h  Logging.h  MercuryAppIdentifier.h  MessageData.h  ObjectPool.h  OneToOneQueue.hpp  Position.h  QuoteBuffer.h  Result.h  Round.h  Session.h  Signal.hpp  StopWatch.h  Timer.h  Utils.h  ValueDateCalendar.h  XmlConfigReader.h
lib/utils/src/: BgwMonitor.cpp  CmdArgParser.cpp  CurrencyPair.cpp  CurrentRateManager.cpp  ErrorHandler.cpp  FixTypes.cpp  Latency.cpp  Logging.cpp  MessageData.cpp  Position.cpp  QuoteBuffer.cpp  Result.cpp  StopWatch.cpp  Timer.cpp  Utils.cpp  ValueDateCalendar.cpp  XmlConfigReader.cpp
src/: ActiveQuoteTable.cpp  CMakeLists.txt  ConnectionBase.cpp  ConnectionManager.cpp  MessageProcessor.cpp  Options.cpp  OrderManager.cpp  RestBase.cpp  RestConnectionBase.cpp  Tools.cpp  main.cpp
src/OKX/: ConnectionMD.cpp  ConnectionORD.cpp
src/binance/: ConnectionMD.cpp  ConnectionORD.cpp  ConnectionSS.cpp
src/coinbase/: ConnectionMD.cpp  ConnectionORD.cpp
tests/: CMakeLists.txt
tests/config/: CurrencyConfig.xml  config.xml  fix8config.xml  logging.properties
tests/include/: unittest.h.in
tests/src/: CoinbaseConnectionTests.cpp  CommonTests.cpp  ConfigTests.cpp  MessageProcessorTests.cpp  TestHelpers.cpp  TestHelpers.h
